<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.cl.CityLogs.fragments.Profile_Fragment"
    tools:showIn="@layout/activity_main" >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Username"
        android:id="@+id/textUsername" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_username"
        android:ems="10"
        android:layout_below="@id/textUsername"
        android:id="@+id/editUsername" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Password"
        android:layout_below="@id/editUsername"
        android:id="@+id/textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:ems="10"
        android:layout_below="@id/textPassword"
        android:id="@+id/editPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Repeat Password"
        android:layout_below="@id/editPassword"
        android:id="@+id/textRepeatPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_confirm_password"
        android:ems="10"
        android:layout_below="@id/textRepeatPassword"
        android:id="@+id/confirm_password" />



    <Button
        android:id="@+id/save_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_below="@id/confirm_password"
        android:text="Save Profile" />

    <Button
        android:id="@+id/cancel_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_below="@+id/save_profile"
        android:text="Cancel" />


</RelativeLayout>
